# bazelcon-2025

./: Dockerfile  README.md  fly.toml  main.slide
examples/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-examples  bazel-out  bazel-testlogs  go.mod  main.go
